--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <div class="team__card">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p class="team__role">UI Designer</p>
-                <ul class="team__social list">
+                <ul class="team__social">
                   <li class="team__icons">
                     <a class="team__link" href="#">
                       <svg class="team__icon" width="20" height="20">
